    - debian/patches/build-ppc64-s390x-curl.patch 
  * Update patches
    - debian/patches/allow-lockPref-everywhere.patch
    - debian/patches/normalize-distribution-searchplugins.patch
  * Bump build-dep on rustc >= 1.22.1 and cargo >= 0.23
  * Add Interlingua language pack
    - update debian/config/locales.all
    - update debian/config/locales.shipped
    - update debian/control

  [ Chris Coulson ]
  * Update disable-geo-specific-search-defaults-for-us.patch to pick up some
    more locales
  * Update searchplugins.conf to ignore recently added experimental and hidden
    Amazon and Google search plugins
  * Add Urdu localized Amazon search plugin
    - add debian/searchplugins/ur/amazon-in.xml
    - update debian/config/searchplugins.conf
  * Don't set distribution.searchplugins.defaultLocale, as this breaks our
    custom searchplugins for non en-US locales
    - update debian/vendor-gre.js
  * Drop region-specific custom Google searchplugins, as these aren't needed
    anymore
    - remove debian/searchplugins/en-GB/google.xml
    - remove debian/searchplugins/en-ZA/google.xml
    - remove debian/searchplugins/ku/google.xml
    - update debian/config/searchplugins.conf
  * Refresh Google search plugin
    - update debian/searchplugins/en-US/google.xml
  * Refresh Baidu search plugin
    - update debian/searchplugins/zh-CN/baidu.xml
  * Refresh Amazon search plugins
    - update debian/searchplugins/de/amazondotcom-de.xml
    - update debian/searchplugins/en-GB/amazon-en-GB.xml
    - update debian/searchplugins/en-US/amazondotcom.xml
    - update debian/searchplugins/fr/amazon-france.xml
    - update debian/searchplugins/it/amazon-it.xml
    - update debian/searchplugins/ja/amazon-jp.xml
    - update debian/searchplugins/zh-CN/amazondotcn.xml
    - remove unused debian/searchplugins/sq/amazon-en-GB.xml
  * Fix LP: #1733970 - Search suggestions are broken after refreshing the
    Google searchplugin
  * Fix a missing token in the user agent string